@@ -60,7 +60,7 @@ static apr_status_t cmd_acme_newreg(md_cmd_ctx *ctx, const md_cmd_t *cmd)
 
     rv = md_acme_acct_register(ctx->acme, ctx->store, md, ctx->p);
     if (APR_SUCCESS != rv) goto leave;
-    /* check if we can read it back, only then it "exsists" */
+    /* check if we can read it back, only then it "exists" */
     rv = md_acme_acct_update(ctx->acme);
     if (APR_SUCCESS != rv) goto leave;
     rv = md_acme_save_acct(ctx->acme, ctx->p, ctx->store); 
